--- a/masters.html
+++ b/masters.html
@@ -316,8 +316,419 @@
         Заминит колесо __________________________от 100 000</p>
     </div>
 </div>
+<div class="type-card-master">
+    <div class="card_master-about d-flex">
+        <div class="card_img"><img src="images/0dwB2ba_fTV3fI8zL7bNvvV6ez-_unnHs3p_M7l8fzW1PA.jpg" alt=""></div>
+        <div class="card-evaluate ">
+            <div class="name">Щерзод</div>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <div class="oclock d-flex"> <p>24/7</p> 
+                <span style="background-color: red; color: white; width: 100px;">Срочный вызов</span>
+            </div>
     </div>
+    <div class="btn-phone_card">
+        <i class="fa-solid fa-phone"></i>
     </div>
+</div>
+<div class="prices-job">
+    <p>Покраска___________________________от 500 000<br>
+    Полировка____________________________от 1 000 000 <br>
+    Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+    <div class="card_img"><img src="images/XsErl615386587042274_l.jpg" alt=""></div>
+    <div class="card-evaluate ">
+        <div class="name">Комил</div>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <div class="oclock d-flex"> <p> 24/7</p> <i class="fa-solid fa-coins"></i></div>
+</div>
+<div class="btn-phone_card">
+    <i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+    Завести автомобиль______________________от 100 000 <br>
+    Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images.jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Щерзод</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;"  class="fa-regular fa-star"></i>
+    <i style="color: yellow;"  class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <div class="oclock d-flex"><p> 24/7</p>
+        <span style="background-color: red; color: white; width: 100px;">Срочный вызов</span></div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Покраска___________________________от 500 000<br>
+Полировка____________________________от 1 000 000 <br>
+Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/1930-6.jpg" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Бахтиер</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images (2).jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Jasur</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Покраска___________________________от 500 000<br>
+Полировка____________________________от 1 000 000 <br>
+Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images (1).jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Toxir</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <div class="oclock"><p> 24/7</p></div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/png-transparent-professional-car-repair-team-sincere-service-car-repair-team-thumbnail.png" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Alpomish</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/736_736_80_ddd82ef624d9cb9aa9933d5618519c16.jpg" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Alish</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+<div class="oclock">
+    <p> 24/7</p>
+</div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img">
+    <img src="images/0dwB2ba_fTV3fI8zL7bNvvV6ez-_unnHs3p_M7l8fzW1PA.jpg" alt="">
+</div>
+<div class="card-evaluate ">
+    <div class="name">Mustafo</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <div class="oclock">
+        <p> 24/7</p>
+    </div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+    <div class="card_master-about d-flex">
+        <div class="card_img"><img src="images/0dwB2ba_fTV3fI8zL7bNvvV6ez-_unnHs3p_M7l8fzW1PA.jpg" alt=""></div>
+        <div class="card-evaluate ">
+            <div class="name">Щерзод</div>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <div class="oclock d-flex"> <p>24/7</p> 
+                <span style="background-color: red; color: white; width: 100px;">Срочный вызов</span>
+            </div>
+    </div>
+    <div class="btn-phone_card">
+        <i class="fa-solid fa-phone"></i>
+    </div>
+</div>
+<div class="prices-job">
+    <p>Покраска___________________________от 500 000<br>
+    Полировка____________________________от 1 000 000 <br>
+    Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+    <div class="card_img"><img src="images/XsErl615386587042274_l.jpg" alt=""></div>
+    <div class="card-evaluate ">
+        <div class="name">Комил</div>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i style="color: yellow;" class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <div class="oclock d-flex"> <p> 24/7</p> <i class="fa-solid fa-coins"></i></div>
+</div>
+<div class="btn-phone_card">
+    <i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+    Завести автомобиль______________________от 100 000 <br>
+    Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images.jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Щерзод</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;"  class="fa-regular fa-star"></i>
+    <i style="color: yellow;"  class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <div class="oclock d-flex"><p> 24/7</p>
+        <span style="background-color: red; color: white; width: 100px;">Срочный вызов</span></div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Покраска___________________________от 500 000<br>
+Полировка____________________________от 1 000 000 <br>
+Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/1930-6.jpg" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Бахтиер</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images (2).jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Jasur</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Покраска___________________________от 500 000<br>
+Полировка____________________________от 1 000 000 <br>
+Антикоррозийная обробот... _________от 1 000 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/images (1).jfif" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Toxir</div>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i style="color: yellow;" class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <div class="oclock"><p> 24/7</p></div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/png-transparent-professional-car-repair-team-sincere-service-car-repair-team-thumbnail.png" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Alpomish</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img"><img src="images/736_736_80_ddd82ef624d9cb9aa9933d5618519c16.jpg" alt=""></div>
+<div class="card-evaluate ">
+    <div class="name">Alish</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+<div class="oclock">
+    <p> 24/7</p>
+</div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+<div class="type-card-master">
+<div class="card_master-about d-flex">
+<div class="card_img">
+    <img src="images/0dwB2ba_fTV3fI8zL7bNvvV6ez-_unnHs3p_M7l8fzW1PA.jpg" alt="">
+</div>
+<div class="card-evaluate ">
+    <div class="name">Mustafo</div>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <div class="oclock">
+        <p> 24/7</p>
+    </div>
+</div>
+<div class="btn-phone_card">
+<i class="fa-solid fa-phone"></i>
+</div>
+</div>
+<div class="prices-job">
+<p>Открыть автомобиль_____________________от 100 000<br>
+Завести автомобиль______________________от 100 000 <br>
+Заминит колесо __________________________от 100 000</p>
+</div>
+</div>
+</div>
+</div>
+
 </main>
 </section>
     <div class="btn-footer d-flex justify-content-center">
