--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <h1 id="text-on-section" class="text-on-section animate__animated animate__fadeInUp">
             Cпециалисты по <br />
             ремонту машин <br />
-           <span style=" color: rgb(54 84 255);;"> со всего </span> Узбекистана!
+            со всего
+           <span style=" color: rgb(54 84 255);" class="multiple-text">Узбекистана !</span> 
           </h1>
           <p id="p-on" class="animate__animated animate__bounceInLeft">На ilojibor.uz зашел — мастера нашел!</p>
           <div id="right-cont-search" class="right-cont-search animate__animated animate__backInLeft">
@@ -60,9 +61,8 @@
           </div>
         </div>
         <div id="left-containers-on-section" class="left-containers-on-section animate__animated animate__backInRight">
-          <img src="https://st2.depositphotos.com/1001335/10179/i/600/depositphotos_101790110-stock-photo-set-of-autoparts-3d-render.jpg" id="img-on-left-containers" /> 
-         
-        <img src="https://www.ustabor.uz/images/main/masters/auto.webp" alt="" style="height: 500px; display: none;">
+          <img src="https://st2.depositphotos.com/1001335/10179/i/600/depositphotos_101790110-stock-photo-set-of-autoparts-3d-render.jpg" id="img-on-left-containers" class="headerImg(1)"/> 
+          <img src="https://www.ustabor.uz/images/main/masters/auto.webp" alt="" style="height: 500px; display: none; border-radius: 50%;" class="classImg(2)">
         </div>
       </div>
     </section>
@@ -565,4 +565,5 @@
     crossorigin="anonymous"
   ></script>
   <script src="./index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </html>
