--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div id="left-containers-on-section" class="left-containers-on-section animate__animated animate__backInRight">
-          <img src="images/depositphotos_102665706-stock-photo-auto-parts-in-the-cardboard.jpg" id="img-on-left-containers" class="headerImg(1)"/> 
+          <img src="images/Screenshot 2023-03-26 090804.png" id="img-on-left-containers" class="headerImg(1)"/> 
           <img src="https://www.ustabor.uz/images/main/masters/auto.webp" alt="" style="height: 500px; display: none; border-radius: 50%;" class="classImg(2)">
         </div>
       </div>
