--- a/index.html
+++ b/index.html
@@ -139,11 +139,7 @@
         </h1>
         <div class="cart__items">
           <div class="cart">
-            <img
-              src="https://www.ustabor.uz/images/pages/home/guide/1.svg"
-              class="cart__img"
-              alt="..."
-            />
+            <i class="fa-sharp fa-solid fa-map-location-dot" style="color: #0b4ec1;"></i>
             <div class="cart__body">
               <h5 class="cart__title">Удобный поиск</h5>
               <p class="cart__text">
@@ -155,11 +151,7 @@
             </div>
           </div>
           <div class="cart">
-            <img
-              src="https://auto.ustabor.uz/images/pages/home/guide/2.svg"
-              class="cart__img"
-              alt="..."
-            />
+            <i class="fa-solid fa-address-card" style="color: #0154e4;"></i>
             <div class="cart__body">
               <h5 class="cart__title">Отзывы и рейтинг</h5>
               <p class="cart__text">
@@ -171,11 +163,7 @@
             </div>
           </div>
           <div class="cart">
-            <img
-              src="https://auto.ustabor.uz/images/pages/home/guide/3.svg"
-              class="cart__img"
-              alt="..."
-            />
+            <i class="fa-solid fa-file-lines" style="color: #1662e3;"></i>
             <div class="cart__body">
               <h5 class="cart__title">Оставьте заявку</h5>
               <p class="cart__text">
@@ -187,11 +175,7 @@
             </div>
           </div>
           <div class="cart">
-            <img
-              src="  https://auto.ustabor.uz/images/pages/home/guide/4.svg"
-              class="cart__img"
-              alt="..."
-            />
+            <i class="fa-sharp fa-solid fa-chart-simple" style="color: #1662e3;"></i>
             <div class="cart__body">
               <h5 class="cart__title">Сравнивайте цены</h5>
               <p class="cart__text">
@@ -204,9 +188,7 @@
           </div>
         </div>
       </div>
-      <div class="main_program container">
-        <img src="https://master-lux.md/images/expertauto/osobennosti-remonta-khodovoy-chasti-avtomobilya-1.jpg" alt="">
-      </div>
+
     </main>
 
     <!-- chasto zadavaemiye voprosi -->
