--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </main>
 
     <!-- chasto zadavaemiye voprosi -->
-    <div id="abs-answers">
+    <div id="abs-answers container" style="width: 1200px; margin: 0 auto;">
       <div id="flex-answers">
         <div id="text-answer">
           <div>
@@ -414,7 +414,7 @@
               </div>
             </div>
           </div>
-          <div class="button-w">
+          <div class="button-w ">
             <button
               class="button-info"
               data-bs-toggle="collapse"
@@ -537,7 +537,7 @@
               </div>
               <div id="footer-end-flex" class="footer-end-flex">  
                 <div>
-                  <h3 id="text-endfooter">© Ilogibor.uz</h3>
+                  <h3 id="text-endfooter">© Ilojibor.uz</h3>
                 </div>
                 <div class="decoration-container">
                   <a href="#" class="decoration">
